# git-learning-by-doing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
tests/maths/: test_add.py
text/: 01-fork.md  02-cloning.md  03-branching.md  04-pushing.md  05-pull-request.md  06-modifying-pr.md  07-ammending-commits.md  08-interactive-rebase-edit.md  09-interactive-rebase-reorder.md  10-stashing.md  11-interactive-rebase-squash.md
