[project]
name = "some-lib"
version = "0.1.0"
authors = [
    {name = "Firstname Lastname"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.3"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
